<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.imotom.dm.ui.OffLineListActivity"
    tools:showIn="@layout/activity_off_line_list">

    <Button
        android:id="@+id/btn_offLineList_checkDevVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/mBlue"
        android:text="@string/check_device_version"
        android:textColor="@color/mFontWhite"
        android:textSize="24sp"
        android:visibility="visible"
        />

    <Button
        android:id="@+id/btn_offLineList_downloadGuoKeAPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/mBlue"
        android:text="@string/download_GUOKE_APP"
        android:textColor="@color/mFontWhite"
        android:textSize="24sp"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btn_offLineList_downloadDaoHang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/mBlue"
        android:text="@string/download_DAOHANG_APP"
        android:textColor="@color/mFontWhite"
        android:textSize="24sp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_offLineList_downloadApp1845"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/mBlue"
        android:text="@string/download__APP1845"
        android:textColor="@color/mFontWhite"
        android:textSize="24sp"
        android:visibility="gone"/>
</LinearLayout>
