<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mGray_guanLi"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.imotom.dm.ui.GuanLiActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_guan_li"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/dev_server"
        android:textColor="@color/mFontGray_guanLi"
        android:textSize="14sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <LinearLayout
        android:id="@+id/ll_checkDevVersion_guanLi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/check_device_version"
            android:textColor="@color/mFontBlack"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/ic_arrows_right"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_huoQuWIFIMiMa_guanLi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/get_wifi_password"
            android:textColor="@color/mFontBlack"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/ic_arrows_right"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_xiuGaiWIFIMiMa_guanLi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/change_wifi_password"
            android:textColor="@color/mFontBlack"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/ic_arrows_right"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/dev_zhiChiDeAPP"
        android:textColor="@color/mFontGray_guanLi"
        android:textSize="14sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <LinearLayout
        android:id="@+id/ll_GKDVRAPP_guanLi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        android:layout_marginBottom="1dp"
        >

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/GKDVR"
            android:textColor="@color/mFontBlack"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            app:srcCompat="@mipmap/ic_arrows_right"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_carDev_guanLi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/navigation"
            android:textColor="@color/mFontBlack"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/ic_arrows_right" />
    </LinearLayout>
</LinearLayout>
