<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.imotom.dm.ui.DengLuActivity"
    tools:showIn="@layout/activity_deng_lu">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#d2d2d2"
            android:layout_marginBottom="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_margin="1dp"
                android:background="@android:color/background_light"
                >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/nothing"
                    android:src="@mipmap/uername_icon" />

                <EditText
                    android:id="@+id/et_dengLu_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/please_enter_the_username"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@color/mGray"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#d2d2d2"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@android:color/background_light"
            android:layout_margin="1dp"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/nothing"
                android:src="@mipmap/pwd_icon" />

            <EditText
                android:id="@+id/et_dengLu_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:ems="10"
                android:hint="@string/please_enter_the_password"
                android:inputType="textPassword"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@color/mGray"
                android:textSize="18sp" />

        </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <CheckBox
            android:id="@+id/cb_dengLu_checkBox"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:checked="false"
            android:duplicateParentState="false"
            android:text="@string/remember_login"
            android:textAllCaps="false"
            android:textColor="#969696"
            android:textSize="24sp" />

    </LinearLayout>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardBackgroundColor="@color/mBlue"
            android:foreground="?attr/selectableItemBackground"
            >
        <Button
            android:id="@+id/btn_dengLu_dengLuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/mFontWhite"
            android:textSize="24sp"
            style="?android:attr/borderlessButtonStyle"
            />
        </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tv_dengLu_tishi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_error_text"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        android:visibility="invisible" />
</LinearLayout>
